Updated logic to handle SONG files, and evenly distributing roles to singers. Also improved ejs templating.
Created a new Singer object; each Singer has a role that can support
multiple role assignments.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/thisisthefuture/sing-hamilton#readme",
   "dependencies": {
-    "body-parser": "^1.15.2"
+    "body-parser": "^1.15.2",
+    "express-ejs-layouts": "^2.2.0"
   }
 }
